projetoBiblioteca/k8s/projeto-biblioteca.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: projetobiblioteca
  labels:
    app: projetobiblioteca
spec:
  replicas: 3
  selector:
    matchLabels:
      app: projetobiblioteca
  template:
    metadata:
      name: projetobiblioteca-apo
      labels:
        app: projetobiblioteca
    spec:
      containers:
        - name: projetobiblioteca
          image: ajalves1911/projetobiblio:latest
          ports:
            - containerPort: 8080
