projetoBiblioteca/k8s/internal-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: internal-service
  labels:
    app: projetobiblioteca
spec:
  selector:
    app: projetobiblioteca
  ports:
    - name: web
      port: 8080
      targetPort: 8080
