projetoBiblioteca/k8s/postgres.yaml
apiVersion: v1
kind: Service
metadata:
  name: postgres
  labels:
    app: postgres
spec:
  ports:
    - port: 5432
      name: postgres
  clusterIP: None
  selector:
    app: postgres
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: postgres
spec:
  selector:
    matchLabels:
      app: postgres
  serviceName: "postgres"
  replicas: 1
  minReadySeconds: 10
  template:
    metadata:
      labels:
        app: postgres
    spec:
      terminationGracePeriodSeconds: 10
      containers:
        - name: postgres
          image: postgres:alpine
          ports:
            - containerPort: 5432
              name: postgres
          volumeMounts:
            - name: postgres-ps
              mountPath: /var/lib/postgres
      volumes:
        - name: postgres-ps
          hostPath:
            path: /home/ana_silverio/Documents/ProjetoBibliotecaCRUD/volumebd
            type: DirectoryOrCreate
