projetoBiblioteca/k8s/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: minha-ingress
  labels:
    app: projetobiblioteca
spec:
  rules:
    - host: simpleapi.com
      http:
        paths:
          - path: "/"
            pathType: ImplementationSpecific
            backend:
              service:
                name: internal-service
                port:
                  number: 8080
